<resources>
    <string name="app_name">My Shoes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank
        fragment
    </string>
    <string name="login">Login</string>
    <string name="web_client_id">425146237557-nfp44p8jbtg5doakqtnpsdnqumnbkl8t.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="chat">Chat</string>
    <string name="my_shoes">My Shoes</string>
    <string name="search">search</string>
    <string name="banner">Banner</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="account">Account</string>
    <string name="login_register">Login / Register</string>
    <string name="close">close</string>
    <string name="categories">Categories</string>
    <string name="search_here">Search here…</string>
    <string name="_10">10</string>
    <string name="step_out_in_style_with_this_sleek_navy_blue_baseball_cap_crafted_from_durable_material_it_features_a_smooth_structured_design_and_an_adjustable_strap_for_the_perfect_fit_protect_your_eyes_from_the_sun_and_complement_your_casual_looks_with_this_versatile_and_timeless_accessory">Step out in style with this sleek navy blue baseball cap. Crafted from durable material, it features a smooth, structured design and an adjustable strap for the perfect fit. Protect your eyes from the sun and complement your casual looks with this versatile and timeless accessory.</string>
    <string name="pay_now">Pay now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="price">$%1$s</string>
    <string name="total_title">Total (%1$s)</string>
    <string name="empty_product">Empty product!!!</string>
    <string name="orders">Orders</string>
    <string name="favourites_list">Favourites list</string>
    <string name="other">Other</string>
    <string name="account_setting">Account Setting</string>
    <string name="feedback">Feedback</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log out</string>
    <string name="quantity">Quantity: </string>
    <string name="_1">1</string>
    <string name="total">Total:</string>
    <string name="all">All</string>
    <string name="_0">0</string>
    <string name="address">Address:</string>
    <string name="order">Order</string>
    <string name="details">Details:</string>
    <string name="total_cost_s_products">Total cost\'s products:</string>
    <string name="shipping_cost">Shipping cost:</string>
    <string name="promotion">Promotion:</string>
    <string name="products">Products:</string>
    <string name="choose_delivery_address">Choose delivery address</string>
    <string name="add_new_address">Edit your address</string>
    <string name="select_city">Select city</string>
    <string name="select_district">Select district</string>
    <string name="select_ward">Select ward</string>
    <string name="name">Name</string>
    <string name="house_number">House Number</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_orders">Your Orders</string>
    <string name="you_have_placed_your_order_successfully">You have placed your order successfully!</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase</string>
    <string name="we_will_confirm_your_order_and_deliver_it_to_you_as_soon_as_possible">We will confirm your order and deliver it to you as soon as possible</string>
    <string name="your_order_id_is">Your order id is:</string>
    <string name="to_your_orders">To your orders</string>
    <string name="wait_for_confirmation">Wait for confirmation</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_id">Order id:</string>
    <string name="order_details">Order Details</string>
    <string name="cancel_order">Cancel order</string>
    <string name="choose_a_reason_for_cancellation">Choose a reason for cancellation:</string>
    <string name="change_combine_order">Change/Combine order</string>
    <string name="duplicate_order">Duplicate order</string>
    <string name="change_of_mind">Change of mind</string>
    <string name="decide_for_alternative_product">Decide for alternative product</string>
    <string name="found_better_price_elsewhere">Found better price elsewhere</string>
</resources>